--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,3 +1,38 @@
+@keyframes shake {
+	0%{
+		transform: translate(1px, 1px) rotate(0deg);
+	}
+	10%{
+		transform: translate(-1px, -1px) rotate(1deg);
+	}
+	20%{
+		transform: translate(-2px, 1px) rotate(-1deg);
+	}
+	30%{
+		transform: translate(1px, 2px) rotate(0deg);
+	}
+	40%{
+		transform: translate(-1px, 1px) rotate(1deg);
+	}
+	50%{
+		transform: translate(1px, -1px) rotate(-2deg);
+	}
+	60%{
+		transform: translate(2px, 1px) rotate(1deg);
+	}
+	70%{
+		transform: translate(-1px, 2px) rotate(2deg);
+	}
+	80%{
+		transform: translate(2px, -1px) rotate(1deg);
+	}
+	90%{
+		transform: translate(-1px, 2px) rotate(0deg);
+	}
+	100%{
+		transform: translate(2px, 1px) rotate(-1deg);
+	}
+}
 .label-nick{
     display: inline;
     position : relative;
@@ -8,13 +43,17 @@
     border : 2px solid white;
     border-radius: 10%;
     box-shadow: 2px 2px 7px 1px;
+    
 }
+/* animation: shake 0.5s infinite; */
+
 .input-nick{
     display: inline;
     position : relative;
     top : 50px;
     left : 250px;
 }
+
 .label-pwd{
     display: inline;
     position : relative;
@@ -34,9 +73,11 @@
 }
 .submit-login{
     position : relative;
-    top : 45px;
-    left : 360px;
+    top : 170px;
+    left : 180px;
+    
 }
-.input-signup{
 
+.input-signup:hover{
+    font-size: 1.5rem;
 }
