--- a/public/stylesheets/member.css
+++ b/public/stylesheets/member.css
@@ -1,29 +1,43 @@
+/* 영어 */
+@import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Pangolin&display=swap');
+/* 한글 */
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Do+Hyeon&family=Pangolin&display=swap');
+
 body{
     background-color : black;
     color : white;
+    
+}
+h1{
+    font-family: 'Pangolin', cursive;
+
 }
 a{
     color : white;
+    text-decoration: none;
+    font-family: 'Pangolin', cursive;
 }
-.myAttractions ul li{
-    /* display : list-item; */
-    list-style-image: url("../../paris.svg");
+.ticket-img{
+    width : 80%;
+    height : 60%;
 }
 .ticket{
     display : grid;
-    grid-template-rows : minmax(100px, 500px);
-    grid-template-columns: 3fr 0.5fr 3fr minmax(50px, 70px);
-    
+    grid-template-rows : 50px;
+    grid-template-columns: 300px 100px 500px;
+    display : flex;
+    justify-content: center;
 }
 /* 왼쪽, 오른쪽, 가운데 정렬 */
 .ticket-left{
+    font-family: 'Bebas Neue', cursive;
     grid-area: 1/1;
     display : grid;
-    grid-template-rows: 3fr repeat(6, 0.5fr);
+    grid-template-rows: 7;
     grid-template-columns: 1;
     border : 5px solid white;
     padding : 20px;
-    /* background-color: teal; */
 }
 .ticket-center{
     grid-area: 1/2;
@@ -31,24 +45,24 @@ a{
     grid-template-rows: 1;
     grid-template-columns: 2;
     border : 5px solid white;
-    /* background-color: rgb(165, 49, 49); */
 }
 .ticket-right{
+    font-family: 'Bebas Neue', cursive;
     grid-area: 1/3;
     display : grid;
     grid-template-rows: 3;
     grid-template-columns: 1;
     border : 5px solid white;
-    /* background-color: rgb(105, 128, 0); */
 }
 /* 내용 구분 */
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:800);
 
 .box-with-text {
+    font-size: 5rem;
   background-image: -webkit-linear-gradient(rgb(0, 0, 0) 50%, white 50%);
   background-repeat: repeat;
-  background-position: 0 0;
-  background-size: 100% 50px;
+  /* background-position: 0 0; */
+  background-size: 50px 50px;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   -webkit-animation: stripes 2s linear infinite;
@@ -75,51 +89,45 @@ a{
 
 .box-with-text {
     grid-area : 1/1;
-  position: absolute;
-  font-size: 4.5rem;
-  top: 13%;
-  left: 21%;
+  /* position: absolute; */
+  font-size: 5.5rem;
+  top: 18%;
+  left: 20%;
   white-space: nowrap;
-  text-align: center;
+  /* text-align: center; */
   text-transform: uppercase;
-  font: bold Open Sans, Impact;
+  /* font: bold Open Sans, Impact; */
   -webkit-transform: translateX(-50%) translateY(-50%);
   -ms-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
 .ticket-title{
-    
-    /* background : linear-gradient(45deg, rgb(247, 202, 201), rgb(145, 168, 209)); */
-    /* background : linear-gradient(90deg, rgb(0, 0, 0), rgb(255, 255, 255)); */
-    /* background:
-    radial-gradient(circle at 50% 0,
-      rgba(255,0,0,.5),
-      rgba(255,0,0,0) 70.71%),
-    radial-gradient(circle at 6.7% 75%,
-      rgba(0,0,255,.5),
-      rgba(0,0,255,0) 70.71%),
-    radial-gradient(circle at 93.3% 75%,
-      rgba(0,255,0,.5),
-      rgba(0,255,0,0) 70.71%) beige; */
-    
+    grid-area : 1/1;
 }
 .label-name{
     grid-area : 2/1;
+    font-size: 2rem;
 }
 .ticket-name{
+    font-family: 'Do Hyeon', sans-serif;
+    font-size: 1.5rem;
     grid-area : 3/1;
 }
 .label-desti{
     grid-area : 4/1;
+    font-size: 2rem;
 }
 .destination{
     grid-area : 5/1;
+    font-size: 1.5rem;
 }
 .label-date{
     grid-area : 6/1;
+    font-size: 2rem;
 }
 .ticket-date{
     grid-area : 7/1;
+    font-size: 1.5rem;
 }
 .bdl{
     writing-mode :vertical-rl;
