--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
         body{
             background-color: black;
             color : white;
+            font-family: 'Pangolin', cursive;
         }
         .sign_up{
             display : flex;
@@ -18,6 +20,13 @@
             display : flex;
             justify-content: center;
             margin-top : 5%;
+        }
+        input{
+            background: transparent;
+            width : 100%;
+        }
+        .btn{
+            background-color :white  !important;
         }
     </style>
     <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -34,10 +43,10 @@
                     success  :(result)=>{ //결과 
                         if(result['correct'] == true){
                             $("font[name = correct_comment]").html('');
-                            $("font[name = correct_comment]").html('사용 가능합니다.');
+                            $("font[name = correct_comment]").html('available');
                         }else{
                             $("font[name = correct_comment]").html('');
-                            $("font[name = correct_comment]").html('사용 불가능합니다.');
+                            $("font[name = correct_comment]").html('not available');
                         }
                     }
                 });
@@ -54,35 +63,35 @@
             <table>
                 <tr>
                     <td>name</td>
-                    <td><input type="text" name="name" placeholder="이름을 입력하세요." required ></td>
+                    <td><input type="text" name="name" placeholder="please input your name" required ></td>
                 </tr>
                 <tr>
                     <td>nickname</td>
                     <td>
-                        <input type="text" id = "nick" name="nick" placeholder="닉네임을 입력하세요." >
-                        <input type="button" id ="correct" value="중복확인">
+                        <input type="text" id = "nick" name="nick" placeholder="please input your nickname" >
+                        <input class = "btn" type="button" id ="correct" value="confirm">
                         <font name = "correct_comment"></font>
                     </td>
                 </tr>
                 <tr>
                     <td>email</td>
-                    <td><input type="email" name="email" placeholder="이메일을 입력하세요." onclick = "emailCheck()" required ></td>
+                    <td><input type="email" name="email" placeholder="please input your email" onclick = "emailCheck()" required ></td>
                 </tr>
                 <tr>
                     <td>password</td>
-                    <td><input type="password" name="pwd" placeholder="비밀번호를 입력하세요." required ></td>
+                    <td><input type="password" name="pwd" placeholder="please input your passwords" required ></td>
                 </tr>
                 <tr>
                     <td>confirm password</td>
-                    <td><input type="password" name="cfPwd" placeholder="비밀번호를 입력하세요." required ></td>
+                    <td><input type="password" name="cfPwd" placeholder="please input your passwords again" required ></td>
                 </tr>
                 <tr>
                     <td>birthday</td>
-                    <td><input type="date" name="birth"></td>
+                    <td><input class = "btn" type="date" name="birth"></td>
                 </tr>
             </table>
             <!-- 로그인 실패했을 때 화면에도 추가하기 -->
-            <input type="submit" value="가입하기">
+            <input  class = "btn"type="submit" value="SignUp">
         </form>
     </div>
 
