--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -24,6 +24,7 @@
         input{
             background: transparent;
             width : 100%;
+            color : white;
         }
         .btn{
             background-color :white  !important;
