--- a/public/stylesheets/member.css
+++ b/public/stylesheets/member.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Pangolin&display=swap');
 /* 한글 */
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Do+Hyeon&family=Pangolin&display=swap');
+/* margin-top : 20px;transform : rotate(90deg)" */
 
 body{
     background-color : black;
@@ -25,7 +26,7 @@ a{
 .ticket{
     display : grid;
     grid-template-rows : 50px;
-    grid-template-columns: 300px 100px 500px;
+    grid-template-columns: 300px 10px 500px;
     display : flex;
     justify-content: center;
 }
@@ -89,10 +90,10 @@ a{
 
 .box-with-text {
     grid-area : 1/1;
-  /* position: absolute; */
+  position: absolute;
   font-size: 5.5rem;
-  top: 18%;
-  left: 20%;
+  top: 45%;
+  left: 55%;
   white-space: nowrap;
   /* text-align: center; */
   text-transform: uppercase;
@@ -135,10 +136,14 @@ a{
     font-size: 1em;
     text-align: center;
     letter-spacing : 17px;
+    padding-left : 10px;
 }
 .barcode{
-    writing-mode :vertical-rl;
     grid-area : 1/2;
+    /* width : 90%;
+    height : 20%;
+    padding-top : 200px;
+    padding-left : 300px; */
 }
 .ticket-mickey{
     grid-area : 1/1;
