--- a/views/view.ejs
+++ b/views/view.ejs
@@ -14,8 +14,10 @@
     <div class = "chat">
         <ul>
             <li>Attractions</li>
-            <li><img src="https://cdn1.parksmedia.wdprapps.disney.com/resize/mwImage/1/1600/900/75/dam/wdpro-assets/dlr/parks-and-tickets/attractions/disneyland/casey-jr-circus-train/casey-jr-circus-train-00.jpg?1559891100710" alt="어트랙션"></li>
-            <li><img src="https://cdn1.parksmedia.wdprapps.disney.com/resize/mwImage/1/1600/900/75/dam/disneyland/attractions/disneyland/casey-jr-circus-train/casey-jr-matterhorn-16x9.jpg?1559891100710" alt=""></li>
+            
+            <li><img src="../images/play<%= id %>.jpg" alt=""></li>
+            <!-- <li><img src="https://cdn1.parksmedia.wdprapps.disney.com/resize/mwImage/1/1600/900/75/dam/wdpro-assets/dlr/parks-and-tickets/attractions/disneyland/casey-jr-circus-train/casey-jr-circus-train-00.jpg?1559891100710" alt="어트랙션"></li>
+            <li><img src="https://cdn1.parksmedia.wdprapps.disney.com/resize/mwImage/1/1600/900/75/dam/disneyland/attractions/disneyland/casey-jr-circus-train/casey-jr-matterhorn-16x9.jpg?1559891100710" alt=""></li> -->
                 <!-- 댓글 쓰는 곳 -->
                 <form action="/view/<%= id %>/write" method="POST">
                     <ul>
@@ -24,6 +26,10 @@
                         </li>
                     </ul>
                 </form>
+
+                <!-- <div class = "chat_center">
+
+                </div> -->
                 <!-- 댓글 보여주는 곳 -->
                 <% if(data.length != 0){ %>
                     <% data.forEach(function(item, index){ %>
