--- a/views/view.ejs
+++ b/views/view.ejs
@@ -15,7 +15,7 @@
         <ul>
             <li>Attractions</li>
             
-            <li><img src="../images/play<%= id %>.jpg" alt=""></li>
+            <li><img class = "view_img"src="../images/play<%= id %>.jpg" alt=""></li>
             <!-- <li><img src="https://cdn1.parksmedia.wdprapps.disney.com/resize/mwImage/1/1600/900/75/dam/wdpro-assets/dlr/parks-and-tickets/attractions/disneyland/casey-jr-circus-train/casey-jr-circus-train-00.jpg?1559891100710" alt="어트랙션"></li>
             <li><img src="https://cdn1.parksmedia.wdprapps.disney.com/resize/mwImage/1/1600/900/75/dam/disneyland/attractions/disneyland/casey-jr-circus-train/casey-jr-matterhorn-16x9.jpg?1559891100710" alt=""></li> -->
                 <!-- 댓글 쓰는 곳 -->
