--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,10 +21,11 @@
   <body>
     <div class = "center">
       <% if(logined == false){ %> 
-          <div class = "login-position">
-          <h1 class = "welcome">Welcome to</h1> <h1 class = "welcome"><%= welcome %></h1>
-          <% include svg1 %>
-          <% include login %> 
+          <!-- <div class = "login-position">
+          <h1 class = "welcome">Welcome to</h1> <h1 class = "welcome"><%= welcome %></h1> -->
+          <% //include svg1 %>
+          <% //include login %>
+          <% include pay %> 
         </div>
         
       <% }else{ %> 
