--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/svg1.css' />
     <link rel="stylesheet" href="/stylesheets/index.css">
+    
     <style>
       p, h1{
         color : white;
@@ -17,6 +18,8 @@
         justify-content: center;
       }
     </style>
+        <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
+        <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-x.y.z.js"></script>
   </head>
   <body>
     <div class = "center">
@@ -48,8 +51,10 @@
       <% } %> 
       
     </div>
+    <script src="/javascripts/pay.js"></script>
     <script src="/javascripts/index.js"></script>
     <script src="/javascripts/animate.js" ></script>
+    
   </body>
   
 </html>
