--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,30 +5,16 @@
     <link rel='stylesheet' href='/stylesheets/svg1.css' />
     <link rel="stylesheet" href="/stylesheets/index.css">
     
-    <style>
-      p, h1{
-        color : white;
-      }
-      a{
-        color : white;
-        text-decoration: none;
-      }
-      .center{
-        display :flex;
-        justify-content: center;
-      }
-    </style>
         <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
         <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-x.y.z.js"></script>
   </head>
   <body>
     <div class = "center">
       <% if(logined == false){ %> 
-          <!-- <div class = "login-position">
-          <h1 class = "welcome">Welcome to</h1> <h1 class = "welcome"><%= welcome %></h1> -->
-          <% //include svg1 %>
-          <% //include login %>
-          <% include pay %> 
+          <div class = "login-position">
+          <h1 class = "welcome">Welcome to</h1> <h1 class = "welcome"><%= welcome %></h1>
+          <% include svg1 %>
+          <% include login %>
         </div>
         
       <% }else{ %> 
@@ -42,7 +28,6 @@
            <% include svg1 %>
         </div>
         <canvas class = "index-position"></canvas>
-
         
         <a class = "member-btn" href="/member">MyTicket</a>
         <a class = "community-btn" href="/community">Community</a>
@@ -51,10 +36,8 @@
       <% } %> 
       
     </div>
-    <script src="/javascripts/pay.js"></script>
     <script src="/javascripts/index.js"></script>
     <script src="/javascripts/animate.js" ></script>
     
   </body>
-  
 </html>
