--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,9 +9,9 @@
 <body>
     <form action="/login" method="POST">
         <p class = "label-nick">nickname</p>
-        <input class = "input-nick"type="text" name="nick" placeholder="닉네임을 입력하세요.">
+        <input class = "input-nick"type="text" name="nick" placeholder="please write down your nickname">
         <p class = "label-pwd">password</p>
-        <input class = "input-pwd" type="password" name="pwd" placeholder="비밀번호를 입력하세요.">
+        <input class = "input-pwd" type="password" name="pwd" placeholder=" please write down your password">
         <input class = "submit-login" type="submit" value="login">
     </form>
     <a class = "input-signup" href="/sign_up">Join Us!</a>
