--- a/public/stylesheets/community.css
+++ b/public/stylesheets/community.css
@@ -1,17 +1,52 @@
-body{
-    background-color: black;
-    color : white;
+body {
+  background-color: black;
+  color: white;
 }
-a{
-    color : white;
-    text-decoration: none;
+a {
+  color: white;
+  text-decoration: none;
 }
-.attraction-img{
-    width : 800px;
-    height : 500px;
+.attraction-img {
+  width: 800px;
+  height: 500px;
 }
-.center{
-    /* display : flex;
+.center {
+  /* display : flex;
     justify-items: center;
     overflow-y: scroll; */
+}
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  20% {
+    transform: translate(-2px, 1px) rotate(-1deg);
+  }
+  30% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(-1px, 1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(1px, -1px) rotate(-2deg);
+  }
+  60% {
+    transform: translate(2px, 1px) rotate(1deg);
+  }
+  70% {
+    transform: translate(-1px, 2px) rotate(2deg);
+  }
+  80% {
+    transform: translate(2px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(-1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(2px, 1px) rotate(-1deg);
+  }
 }
