--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,85 +1,96 @@
-@import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Pangolin&display=swap");
 
-.welcome{
-  font-family: 'Pangolin', cursive;
+p,
+h1 {
+  color: white;
+}
+a {
+  color: white;
+  text-decoration: none;
+}
+.center {
+  display: flex;
+  justify-content: center;
+}
+
+.welcome {
+  font-family: "Pangolin", cursive;
   font-size: 3em;
   animation: blink 5s 3;
   animation-delay: 5s;
 }
-.welcomeNick{
-  font-family: 'Pangolin', cursive;
+.welcomeNick {
+  font-family: "Pangolin", cursive;
   font-size: 3em;
   animation: blink 5s 3;
   animation-delay: 5s;
 }
 
+.login-position {
+  position: relative;
+}
+.title {
+  color: white;
+}
+.welcome {
+  margin: 0 auto;
+  color: white;
+}
+.btn-mypage {
+  z-index: 2;
+}
+.btn-logout {
+  z-index: 2;
+}
+.btn-write {
+  z-index: 2;
+}
 
-  .login-position{
-    position: relative;
-  }
-  .title{
-    color : white;
-  }
-  .welcome{
-    margin : 0 auto;
-    color : white;
-  }
-.btn-mypage{
-  z-index : 2;
-}
-.btn-logout{
-  z-index : 2;
-}
-.btn-write{
-  z-index : 2;
-}
-
-a{
+a {
   animation: shake 4s infinite;
 }
 /* 애니메이션 */
-@keyframes blink{
-  10%{
-    color : inherit;
-    text-shadow : inherit;
+@keyframes blink {
+  10% {
+    color: inherit;
+    text-shadow: inherit;
   }
-  30%{
-    color : rgb(131, 131, 131);
+  30% {
+    color: rgb(131, 131, 131);
   }
-
 }
 @keyframes shake {
-	0%{
-		transform: translate(1px, 1px) rotate(0deg);
-	}
-	10%{
-		transform: translate(-1px, -1px) rotate(1deg);
-	}
-	20%{
-		transform: translate(-2px, 1px) rotate(-1deg);
-	}
-	30%{
-		transform: translate(1px, 2px) rotate(0deg);
-	}
-	40%{
-		transform: translate(-1px, 1px) rotate(1deg);
-	}
-	50%{
-		transform: translate(1px, -1px) rotate(-2deg);
-	}
-	60%{
-		transform: translate(2px, 1px) rotate(1deg);
-	}
-	70%{
-		transform: translate(-1px, 2px) rotate(2deg);
-	}
-	80%{
-		transform: translate(2px, -1px) rotate(1deg);
-	}
-	90%{
-		transform: translate(-1px, 2px) rotate(0deg);
-	}
-	100%{
-		transform: translate(2px, 1px) rotate(-1deg);
-	}
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  20% {
+    transform: translate(-2px, 1px) rotate(-1deg);
+  }
+  30% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(-1px, 1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(1px, -1px) rotate(-2deg);
+  }
+  60% {
+    transform: translate(2px, 1px) rotate(1deg);
+  }
+  70% {
+    transform: translate(-1px, 2px) rotate(2deg);
+  }
+  80% {
+    transform: translate(2px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(-1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(2px, 1px) rotate(-1deg);
+  }
 }
